Javadoc comments added